trying to fix permgen errors...